@startuml
skinparam classAttributeIconSize 0
class ContactsStorageCSE{
- filename : String
+ ContactsStorageCSE(filename : String)
+ loadContacts() : List<Contact>
+ saveContacts(list : List<Contact>) : boolean
}
ContactsStorageCSE ..|> ContactsStorageInterface
class ContactsStorageTXT{
- filename : String
+ ContactsStorageTXT(filename : String)
+ loadContacts() : List<Contact>
+ saveContacts(list : List<Contact>) : boolean
}
ContactsStorageTXT ..|> ContactsStorageInterface
class ContactsStorageBinary{
- filename : String
+ ContactsStorageBinary(filename : String)
+ loadContacts() : List<Contact>
+ saveContacts(list : List<Contact>) : boolean
}
ContactsStorageBinary ..|> ContactsStorageInterface
class ContactsStorageCSV{
- filename : String
+ ContactsStorageCSV(filename : String)
+ loadContacts() : List<Contact>
+ saveContacts(list : List<Contact>) : boolean
}
ContactsStorageCSV ..|> ContactsStorageInterface
class ContactsManager{
contacts : List<Contact>
origin : ContactsStorageInterface
+ ContactsManager()
+ ContactsManager(contacts : List<Contact>)
+ ContactsManager(store : ContactsStorageInterface)
+ openAndLoadContacts(store : ContactsStorageInterface) : void
+ saveAndClose() : void
+ saveAndClose(store : ContactsStorageInterface) : void
+ exist(contact : Contact) : boolean
+ getByName(name : String) : Contact
+ add(contact : Contact) : boolean
+ remove(contact : Contact) : boolean
}
ContactsManager ..|> ContactsInterface
class Main{
+ {static} main(args : String[]) : void
}
class Contact{
- name : String
- telephone : String
+ Contact(name : String, telephone : String)
+ getName() : String
+ toString() : String
+ getTelephone() : String
+ setTelephone(telephone : String) : void
}
ContactsManager--"origin" ContactsStorageInterface
interface ContactsStorageInterface{
+ loadContacts() : List<Contact>
+ saveContacts(list : List<Contact>) : boolean
}
interface ContactsInterface{
+ openAndLoadContacts(store : ContactsStorageInterface) : void
+ saveAndClose() : void
+ saveAndClose(store : ContactsStorageInterface) : void
+ exist(contact : Contact) : boolean
+ getByName(name : String) : Contact
+ add(contact : Contact) : boolean
+ remove(contact : Contact) : boolean
}
ContactsManager--Contact
Main-->ContactsManager
@enduml